# china-mirror-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.github/workflows/: _probe.yml  deprecation-watch.yml  mirror-health.yml  readme-refresh.yml  weekly-curation.yml
china-mirror/.claude-plugin/: plugin.json
china-mirror/skills/china-mirror/: SKILL.md
china-mirror/skills/china-mirror/scripts/: diagnose.sh
data/: mirrors.yml  page_fingerprints.json
docs/: architecture.md  examples.md  mirrors-policy.md  troubleshooting.md
reports/: report.json
scripts/: backup_config.sh  check_mirrors.py  common.sh  mirror_alert.py  render_readme.py  restore_config.sh  setup_apt.sh  setup_cargo.sh  setup_conda.sh  setup_docker.sh  setup_flutter.sh  setup_github.sh  setup_go.sh  setup_homebrew.sh  setup_npm.sh  setup_pip.sh  watch_deprecation.py  weekly_curation.py
skills/bootstrap-china-network/: SKILL.md
skills/bootstrap-china-network/scripts/github/: setup.sh
skills/china-mirror/: SKILL.md
skills/china-mirror/.claude-plugin/: plugin.json
skills/china-mirror/scripts/: diagnose.sh
skills/diagnose-network-environment/: SKILL.md
skills/fix-apt-mirror/: SKILL.md
skills/fix-conda-mirror/: SKILL.md
skills/fix-docker-mirror/: SKILL.md
skills/fix-flutter-mirror/: SKILL.md
skills/fix-github-mirror/: SKILL.md
skills/fix-go-proxy/: SKILL.md
skills/fix-homebrew-mirror/: SKILL.md
skills/fix-node-mirror/: SKILL.md
skills/fix-python-mirror/: SKILL.md
skills/fix-rust-mirror/: SKILL.md
(+11 files in other folders)
